--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<div class="inner">
 									<h3>JavaScript Snake Game</h3>
 									<p>Built with HTML, CSS, JavaScript. A Fully featured Retro Snakegame.</p>
-									<a href="game.html" class="button style3 fit" data-poptrox="youtube,800x400">Demo</a>
+									<a href="snakegame.html" class="button style3 fit" data-poptrox="youtube,800x400">Demo</a>
 								</div>
 							</div>
 
