--- a/test.html
+++ b/test.html
@@ -50,6 +50,14 @@
       var ctx = canvas.getContext('2d')
       ctx.fillStyle = 'black'
       ctx.fillRect(0, 0, canvas.width, canvas.height)
+      let speed = 7;
+
+      function drawGame() {
+        console.log('draw game');
+        setTimeout(drawGame, 1000 / speed);
+      }
+
+      drawGame();
     </script>
   </body>
 </html>
