--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/snek.jpg" alt="" /></a>
+								<a href="snakegame.html" class="image fit"><img src="images/snek.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>JavaScript Snake Game</h3>
 									<p>Built with HTML, CSS, JavaScript. A Fully featured Retro Snakegame.</p>
