--- a/snakegame.html
+++ b/snakegame.html
@@ -15,8 +15,12 @@
 
 <body>
     
+    <a href="index.html">
+        <button id="home-button">Home</button>
+      </a>
 
     <div id="game-container">
+        
         <div id="title">Snek</div>
         <canvas id="game" width="400" height="400"></canvas>
     </div>
