--- a/index.html
+++ b/index.html
@@ -1,70 +1,101 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Full Motion by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>My Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body id="top">
-
-			<!-- Banner -->
-			<!--
+  <head>
+    <title>My Portfolio</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body id="top">
+    <!-- Banner -->
+    <!--
 				To use a video as your background, set data-video to the name of your video without
 				its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
 				formats to work correctly.
 			-->
-				<section id="banner" data-video="images/banner">
-					<div class="inner">
-						<header>
-							<h1>My Portfolio</h1>
-							<p>Check out my coding projects<br />
-							Designed by <br> <a href="https://github.com/AdrianCCollier">AdrianCCollier</a> on GitHub</p>
-						</header>
-						<a href="#main" class="more">Learn More</a>
-					</div>
-				</section>
+    <section id="banner" data-video="images/banner">
+      <div class="inner">
+        <header>
+          <h1>My Portfolio</h1>
+          <p>
+            Check out my coding projects<br />
+            Designed by <br />
+            <a href="https://github.com/AdrianCCollier">AdrianCCollier</a> on
+            GitHub
+          </p>
+        </header>
+        <a href="#main" class="more">Learn More</a>
+      </div>
+    </section>
 
-			<!-- Main -->
-				<div id="main">
-					<div class="inner">
+    <!-- Main -->
+    <div id="main">
+      <div class="inner">
+        <!-- Boxes -->
+        <div class="thumbnails">
+          <div class="box">
+            <a href="https://youtu.be/s6zR2T9vn2c" class="image fit"
+              ><img src="images/todo.jpg" alt=""
+            /></a>
+            <div class="inner">
+              <h3>To-Do List</h3>
+              <p>
+                Built using HTML, CSS, JavaScript, MongoDB. A Fully featured
+                To-Do List.
+              </p>
+              <a
+                href="https://youtu.be/s6zR2T9vn2c"
+                class="button fit"
+                data-poptrox="youtube,800x400"
+                >Demo</a
+              >
+            </div>
+          </div>
 
-					<!-- Boxes -->
-						<div class="thumbnails">
+          <div class="box">
+            <a href="APODAPI.html" class="image fit"
+              ><img src="images/mars.jpg" alt=""
+            /></a>
+            <div class="inner">
+              <h3>NASA Mars Weather API</h3>
+              <p>
+                Built using NASA's API to generate continous weather
+                measurements from Mar's Elysium Planitia.
+              </p>
+              <a
+                href="APODAPI.html"
+                class="button style2 fit"
+                data-poptrox="youtube,800x400"
+                >Demo</a
+              >
+            </div>
+          </div>
 
-							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/todo.jpg" alt="" /></a>
-								<div class="inner">
-									<h3>To-Do List</h3>
-									<p>Built using HTML, CSS, JavaScript, MongoDB. A Fully featured To-Do List. </p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Demo</a>
-								</div>
-							</div>
+          <div class="box">
+            <a href="snakegame.html" class="image fit"
+              ><img src="images/snek.jpg" alt=""
+            /></a>
+            <div class="inner">
+              <h3>JavaScript Snake Game</h3>
+              <p>
+                Built with HTML, CSS, JavaScript. A Fully featured Retro
+                Snakegame.
+              </p>
+              <a
+                href="snakegame.html"
+                class="button style3 fit"
+                data-poptrox="youtube,800x400"
+                >Demo</a
+              >
+            </div>
+          </div>
 
-							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/mars.jpg" alt="" /></a>
-								<div class="inner">
-									<h3>NASA Mars Weather API</h3>
-									<p>Built using NASA's API to generate continous weather measurements from Mar's Elysium Planitia.</p>
-									<a href="mars.html" class="button style2 fit" data-poptrox="youtube,800x400">Demo</a>
-								</div>
-							</div>
-
-							<div class="box">
-								<a href="snakegame.html" class="image fit"><img src="images/snek.jpg" alt="" /></a>
-								<div class="inner">
-									<h3>JavaScript Snake Game</h3>
-									<p>Built with HTML, CSS, JavaScript. A Fully featured Retro Snakegame.</p>
-									<a href="snakegame.html" class="button style3 fit" data-poptrox="youtube,800x400">Demo</a>
-								</div>
-							</div>
-
-							<!-- <div class="box">
+          <!-- <div class="box">
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>Nascetur nunc varius commodo</h3>
@@ -90,35 +121,58 @@
 									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div> -->
+        </div>
+      </div>
+    </div>
 
-						</div>
+    <!-- Footer -->
+    <footer id="footer">
+      <div class="inner">
+        <h2>Etiam veroeros lorem</h2>
+        <p>
+          Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi,
+          ac imperdiet dolor tincidunt nec. Ut erat lectus, dictum sit amet
+          lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit,
+          consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi
+          luctus auctor. Donec sit amet dolor in diam feugiat venenatis.
+        </p>
 
-					</div>
-				</div>
+        <ul class="icons">
+          <li>
+            <a href="https://github.com/AdrianCCollier" class="icon fa-github"
+              ><span class="label">Github</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="icon fa-facebook"
+              ><span class="label">Facebook</span></a
+            >
+          </li>
+          <li>
+            <a href="#" class="icon fa-instagram"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a href="mailto:adrianccollier@gmail.com" class="icon fa-envelope"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+        <p class="copyright">
+          &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>.
+          Images: <a href="https://unsplash.com/">Unsplash</a>. Videos:
+          <a href="http://coverr.co/">Coverr</a>.
+        </p>
+      </div>
+    </footer>
 
-			<!-- Footer -->
-				<footer id="footer">
-					<div class="inner">
-						<h2>Etiam veroeros lorem</h2>
-						<p>Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi, ac imperdiet dolor tincidunt nec. Ut erat lectus, dictum sit amet lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit, consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi luctus auctor. Donec sit amet dolor in diam feugiat venenatis. </p>
-
-						<ul class="icons">
-							<li><a href="https://github.com/AdrianCCollier" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="mailto:adrianccollier@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="http://coverr.co/">Coverr</a>.</p>
-					</div>
-				</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
