--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--
-	Full Motion by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
   <head>
     <title>My Portfolio</title>
@@ -58,17 +54,16 @@
           </div>
 
           <div class="box">
-            <a href="APODAPI.html" class="image fit"
+            <a href="asteroidTracker.html" class="image fit"
               ><img src="images/mars.jpg" alt=""
             /></a>
             <div class="inner">
-              <h3>NASA Mars Weather API</h3>
+              <h3>Near Earth Asteroid Tracker</h3>
               <p>
-                Built using NASA's API to generate continous weather
-                measurements from Mar's Elysium Planitia.
+                Built using NASA's Near Earth Object Web service API along with the Canvas API to visualize the location of nearby asteroids.
               </p>
               <a
-                href="APODAPI.html"
+                href="asteroidTracker.html"
                 class="button style2 fit"
                 data-poptrox="youtube,800x400"
                 >Demo</a
@@ -95,32 +90,6 @@
             </div>
           </div>
 
-          <!-- <div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
-								</div>
-							</div>
-
-							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
-								</div>
-							</div>
-
-							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-								<div class="inner">
-									<h3>Nascetur nunc varius commodo</h3>
-									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
-								</div>
-							</div> -->
         </div>
       </div>
     </div>
@@ -128,14 +97,8 @@
     <!-- Footer -->
     <footer id="footer">
       <div class="inner">
-        <h2>Etiam veroeros lorem</h2>
-        <p>
-          Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi,
-          ac imperdiet dolor tincidunt nec. Ut erat lectus, dictum sit amet
-          lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit,
-          consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi
-          luctus auctor. Donec sit amet dolor in diam feugiat venenatis.
-        </p>
+
+    
 
         <ul class="icons">
           <li>
