--- a/asteroidTracker.html
+++ b/asteroidTracker.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navmenu"></div>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="#Home" class="nav-link">Home</a>
+            <a href="index.html" class="nav-link">Home</a>
           </li>
 
           <li class="nav-item">
@@ -54,9 +54,10 @@
 
     <!--Showcase for Canvas-->
 
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
+    <section class="bg-dark text-light p-5 text-center text-sm-start" style="background-image: url('images/asteroidTracker/')">
       <div class="container">
         <div class="d-sm-flex align-items-center justify-content-between">
+          
           <div>
             <h1>
               Near Earth <span class="text-danger"> Asteroid </span>Tracker
@@ -68,9 +69,9 @@
               visualize the solar system and to plot asteroids with their actual
               coordinates.
             </p>
-            <button class="btn btn-primary btn-lg">Start</button>
+            <button class="btn btn-primary btn-lg" onclick="location.href='#neoMap'">Start</button>
           </div>
-          <img class=img-fluid w-50 d-none d-sm-block"
+          <img class=img-fluid w-100 d-none d-sm-block"
           src="images/asteroidTracker/asteroid.jpg" alt="">
         </div>
       </div>
