testing spotify search endpoints

--- a/spotifyAPI/spotifyVisualizer.html
+++ b/spotifyAPI/spotifyVisualizer.html
@@ -15,10 +15,20 @@
 
     <!--CSS Link-->
     <link rel="stylesheet" href="assets/css/spotifyVisualizer.css" />
+    
 
     <title>Spotify Audio Visualizer</title>
   </head>
   <body>
+
+    <!--Spotify Playback SDK-->
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+
+    
+
+
+
+
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-2">
       <div class="container">
@@ -81,6 +91,8 @@
     </div>
   </div>
 </div>
+
+<button id="togglePlay">Toggle Play</button>
 
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="assets/js/spotifyVisualizer.js"></script>
