--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- Boxes -->
         <div class="thumbnails">
           <div class="box">
-            <a href="spotifyVisualizer.html" class="image fit"
+            <a href="spotifyAPI/spotifyVisualizer.html" class="image fit"
               ><img src="images/spotifyVisualizer/2.jfif" alt=""
             /></a>
             <div class="inner">
@@ -77,7 +77,7 @@
                 Built using HTML, CSS, JavaScript, MongoDB. Visualize your favorite songs.
               </p>
               <a
-                href="spotifyVisualizer.html"
+                href="spotifyAPI/spotifyVisualizer.html"
                 class="button fit"
                 data-poptrox="youtube,800x400"
                 >Demo</a
