moved folder structure

--- a/spotifyAPI/spotifyVisualizer.html
+++ b/spotifyAPI/spotifyVisualizer.html
@@ -14,7 +14,7 @@
     />
 
     <!--CSS Link-->
-    <link rel="stylesheet" href="spotifyAPI/spotifyVisualizer.css" />
+    <link rel="stylesheet" href="assets/css/spotifyVisualizer.css" />
     
 
     <title>Spotify Audio Visualizer</title>
@@ -97,5 +97,6 @@
 
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="spotifyAPI/spotifyVisualizer.js"></script>
+    <script src="assets/js/spotifyVisualizer.js"></script>
 </body>
 </html>
