--- a/spotifyVisualizer.html
+++ b/spotifyVisualizer.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="assets/css/spotifyVisualizer.css" />
 
-    <title>Spotify Audio Visualizer</title>
+    <title>Spotify Audio Visualizer Updated</title>
   </head>
   <body>
     <!--Spotify Playback SDK-->
