--- a/web-api-auth-examples-master/authorization_code/public/spotifyVisualizer.html
+++ b/web-api-auth-examples-master/authorization_code/public/spotifyVisualizer.html
@@ -15,7 +15,7 @@
 
     <!--CSS Link-->
 
-    <link rel="stylesheet" href="assets/css/spotifyVisualizer.css" />
+    <link rel="stylesheet" href="/web-api-auth-examples-master/authorization_code/spotifyVisualizer.css" />
 
     <title>Spotify Audio Visualizer</title>
   </head>
@@ -26,7 +26,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-2">
       <div class="container">
-        <a href="#" class="navbar-brand">Spotify Audio Visualizer</a>
+        <a href="#" class="navbar-brand">Spotify Fancyffffff Audio Visualizer</a>
 
         <!--Navbar Hamburger Menu Button-->
         <button
@@ -98,7 +98,8 @@
       </div>
     </div>
 
+    
+    <script src="/web-api-auth-examples-master/authorization_code/spotifyVisualizer.js"></script>
     <script src="//d3js.org/d3.v3.min.js"></script>
-    <script src="/assets/js/spotifyVisualizer.js"></script>
   </body>
 </html>
