got rid of extra css files, app.css now holds all styling

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                 href="/web-api-auth-examples-master/authorization_code/public/index.html"
                 class="button fit"
                 data-poptrox="youtube,800x400"
-                >Demo</a
-              >
+                >Demo</a>
             </div>
           </div>
 
