update to main page

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body id="top">
 
-    <!--Navbar-->
+    <!-- Navbar
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-2">
       <div class="container">
-        <a href="#" class="navbar-brand">Spotify Audio Visualizer</a>
+        <a href="#" class="navbar-brand">Spotify Audio Visualizer</a> -->
 
-        <!--Navbar Hamburger Menu Button-->
+        <!-- Navbar Hamburger Menu Button
         <button
           class="navbar-toggler"
           type="button"
@@ -22,9 +22,9 @@
           data-bs-target="#navmenu"
         >
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
 
-        <div class="collapse navbar-collapse" id="navmenu"></div>
+        <!-- <div class="collapse navbar-collapse" id="navmenu"></div>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a href="index.html" class="nav-link">Home</a>
@@ -39,8 +39,8 @@
           </li>
         </ul>
       </div>
-      <!-- End of Navbar Container-->
-    </nav>
+      
+    </nav> -->
 
 
     <!-- Banner -->
@@ -54,8 +54,7 @@
         <header>
           <h1>Adrian Collier</h1>
           <p>
-            Check out my coding projects<br />
-            Pls hire me
+            Thank you for visiting my portfolio. Feel free to demo my coding projects.
           </p>
         </header>
         <a href="#main" class="more">Learn More</a>
@@ -138,7 +137,7 @@
               ><span class="label">Github</span></a
             >
           </li>
-          <li>
+          <!-- <li>
             <a href="#" class="icon fa-facebook"
               ><span class="label">Facebook</span></a
             >
@@ -147,7 +146,7 @@
             <a href="#" class="icon fa-instagram"
               ><span class="label">Instagram</span></a
             >
-          </li>
+          </li> -->
           <li>
             <a href="mailto:adrianccollier@gmail.com" class="icon fa-envelope"
               ><span class="label">Email</span></a
