--- a/asteroidTracker/asteroidTracker.html
+++ b/asteroidTracker/asteroidTracker.html
@@ -12,7 +12,7 @@
   <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
   <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="./snakegame.css">
+    <link rel="stylesheet" type="text/css" href="./asteroidTracker.css">
   </head>
   <body>
 
@@ -35,7 +35,7 @@
     <!-- End Navbar-->
 
 
-
+  <h1 style="text-align: center; background-color: white;">Project currently being restructured</h1>
     <!--Game Structure-->
     <div id="game-container">
       
