--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="inner">
         <div class="thumbnails">
           <div class="box">
-            <a href="/asteroidTracker.html" class="image fit">
+            <a href="/asteroidTracker/asteroidTracker.html" class="image fit">
               <img src="/website/src/components/images/asteroid.jpg" width="200px" alt="Asteroid">
             </a>
             <div class="inner">
@@ -65,13 +65,13 @@
             </div>
           </div>
           <div class="box">
-            <a href="/snakeGame/snakegame.html" class="image fit">
+            <a href="/snakegame.html" class="image fit">
               <img src="/website/src/components/images/snake.jpg" width="200px" alt="Asteroid">
             </a>
             <div class="inner">
               <h3>Snake Game</h3>
-              <p>An interactive snake game built with Html, CSS, JavaScript.</p>
-              <a href="/snakeGame/snakegame.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
+              <p>An interactive snake game built with HTML, CSS, JavaScript.</p>
+              <a href="/snakegame.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
             </div>
           </div>
         </div>
