--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Font-awesome import for footer-->
+    <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+
+
+
+    <link rel="stylesheet" href="contact.css">
     <title>Contact</title>
 </head>
 <body>
 
-    <h1>This is the contact page FIXME</h1>
     
+      <!--Navbar-->
+      <nav class="nav">
+      <a href="/" class="nav__brand"></a>
+      <ul class="nav__menu">
+        <li class="nav__item">
+          <a href="/" class="nav__link">Home</a>
+        </li>
+        <li class="nav__item">
+          <a href="/contact.html" class="nav__link">Contact</a>
+        </li>
+      </ul>
+      <div class="nav__toggler">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+
+    <main>
+  <table>
+    <tr>
+      <td>Email:</td>
+      <td><a href="mailto:adrianccollier@gmail.com">adrianccollier@gmail.com</a></td>
+    </tr>
+    <tr>
+      <td>Phone:</td>
+      <td>(575) 652-7327</td>
+    </tr>
+    <tr>
+      <td>Location:</td>
+      <td>Las Cruces, NM</td>
+    </tr>
+  </table>
+</main>
+    
+
+
+
+    <!--Footer-->
+       <!--Footer-->
+<footer id="footerWrapper">
+    <div id="footerLinks">
+      <a href="mailto:adrianccollier@gmail.com"><i class="fa-sharp fa-solid fa-envelope fa-xl"></i></a>
+      <a href="https://github.com/AdrianCCollier"><i class="fa-brands fa-github fa-xl"></i></a> 
+      <a href="./Adrian Collier Resume.pdf"><i class="fa-solid fa-download fa-xl" alt="Download Resume"></i></a> 
+    </div>
+</footer>
 </body>
 </html>
