--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Coding Projects</title>
+    <title>Adrian's Personal Website</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -12,10 +12,7 @@
 
     <!--Landing page CSS styles-->
       <link rel="stylesheet" href="./main.css" />
-      
-  
   </head>
-
 
   <body>
     
@@ -40,6 +37,19 @@
     <!--Main body-->
     <div id="main">
       <div class="inner">
+
+        <div class="about-container">
+
+            <div class="about-me picture">
+                <img src="/CS382/personalSite/images/henry.png" width="300px" alt="profile- picture">
+            </div>
+
+            <div class="about-me bio">
+                <h3>About Me</h3>
+                <p>Hi, my name is Adrian and I'm a Computer Science major student at NMSU. My hobbies include Rocket League, my dog Toaster, working out and tracking macros, as well as programming. My projects can be played below, thanks for visiting.</p>
+            </div>
+        </div>
+
         <div class="thumbnails">
           <div class="box">
             <a href="/asteroidTracker/asteroidTracker.html" class="image fit">
