update button styling

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         <div class="thumbnails">
           <div class="box">
             <a href="/asteroidTracker/asteroidTracker.html" class="image fit">
-              <img src="/website/src/components/images/asteroid.jpg" width="200px" alt="Asteroid">
+              <img src="/website/src/components/images/asteroid.jpg" width="200px" height="165px" alt="Asteroid">
             </a>
             <div class="inner">
               <h3>Near Earth Asteroid Tracker UI</h3>
-              <p>Built with NASA's NeoWS API, this web app visualizes the solar system and nearby asteroids with the Canvas API.</p>
+              <p>Built with NASA's NeoWS API. Visualize the solar system.</p>
               <a href="/asteroidTracker.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
             </div>
           </div>
@@ -66,8 +66,10 @@
               <img src="/website/src/components/images/audioVisual.jfif" width="200px" alt="Asteroid">
             </a>
             <div class="inner">
-              <h3>Spotify Audio Visualizer</h3>
-              <p>Built using HTML, CSS, JavaScript, MongoDB. Visualize your favorite songs.</p>
+              <h3>Spotify Audio Visualizer UI</h3>
+              <p>Built using HTML, CSS, JavaScript, MongoDB.
+
+              </p>
               <a href="/calculator/index.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
             </div>
           </div>
