--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="thumbnails">
           <div class="box">
             <a href="/asteroidTracker/asteroidTracker.html" class="image fit">
-              <img src="/website/src/components/images/asteroid.jpg" width="200px" height="197px" alt="Asteroid">
+              <img src="/website/src/components/images/asteroid.jpg"  alt="Asteroid">
             </a>
             <div class="inner">
               <h3>Near Earth Asteroid Tracker UI</h3>
@@ -63,11 +63,11 @@
           </div>
           <div class="box">
             <a href="/calculator/index.html" class="image fit">
-              <img src="/website/src/components/images/audioVisual.jfif" width="200px" alt="Asteroid">
+              <img src="/website/src/components/images/audioVisual.jfif" alt="Asteroid">
             </a>
             <div class="inner">
               <h3>Spotify Audio Visualizer UI</h3>
-              <p>Built using HTML, CSS, JavaScript, MongoDB.
+              <p>Built using HTML, CSS, JavaScript, MongoDB. As well as with love.
 
               </p>
               <a href="/calculator/index.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
@@ -76,7 +76,7 @@
 
           <div class="box">
             <a href="/snakegame.html" class="image fit">
-              <img src="/website/src/components/images/snake.jpg" width="200px" alt="Asteroid">
+              <img src="/website/src/components/images/snake.jpg" alt="Asteroid">
             </a>
             <div class="inner">
               <h3>Snake Game</h3>
