update to contact card styling
added color scheme

--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
 
+    <!--Font awesome import for contact icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all"/>
 
 
+    <!-- Actual CSS for this this page-->
     <link rel="stylesheet" href="contact.css">
     <title>Contact</title>
 </head>
@@ -35,27 +38,31 @@
       </div>
     </nav>
 
+    <!-- Main body, includes a contact card-->
     <main>
-  <table>
-    <tr>
-      <td>Email:</td>
-      <td><a href="mailto:adrianccollier@gmail.com">adrianccollier@gmail.com</a></td>
-    </tr>
-    <tr>
-      <td>Phone:</td>
-      <td>(575) 652-7327</td>
-    </tr>
-    <tr>
-      <td>Location:</td>
-      <td>Las Cruces, NM</td>
-    </tr>
-  </table>
-</main>
+      <div class="contact-container">
+        <h2>Contact Me</h2>
+        <table>
+          <tr>
+            <td><i class="fas fa-envelope"></i></td>
+            <td><a href="mailto:adrianccollier@gmail.com">adrianccollier@gmail.com</a></td>
+          </tr>
+          <tr>
+            <td><i class="fas fa-phone"></i></td>
+            <td>(575) 652-7327</td>
+          </tr>
+          <tr>
+            <td><i class="fab fa-github"></i></td>
+            <td><a href="https://github.com/AdrianCCollier">AdrianCCollier</a></td>
+          </tr>
+          <tr>
+            <td><i class="fab fa-facebook"></i></td>
+            <td><a href="https://www.facebook.com/people/Danny-DeVito/100049670889493/">Danny DeVito</a></td>
+          </tr>
+        </table>
+      </div>
+    </main>
     
-
-
-
-    <!--Footer-->
        <!--Footer-->
 <footer id="footerWrapper">
     <div id="footerLinks">
