update navbar consistency across pages

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="box">
-            <a href="/calculator/index.html" class="image fit">
+            <a href="/audiovisualizer.html" class="image fit">
               <img src="/website/src/components/images/audioVisual.jfif" alt="Asteroid">
             </a>
             <div class="inner">
@@ -70,7 +70,7 @@
               <p>Built using HTML, CSS, JavaScript, MongoDB. As well as with love.
 
               </p>
-              <a href="/calculator/index.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
+              <a href="/audiovisualizer.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
             </div>
           </div>
 
