updating snake page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="/" class="nav__link">Home</a>
         </li>
         <li class="nav__item">
-          <a href="/contact.html" class="nav__link">Contact</a>
+          <a href="/zCodeSite/contact.html" class="nav__link">Contact</a>
         </li>
       </ul>
       <div class="nav__toggler">
@@ -75,13 +75,13 @@
           </div>
 
           <div class="box">
-            <a href="/snakegame.html" class="image fit">
+            <a href="/zCodeSite/snakegame.html" class="image fit">
               <img src="/website/src/components/images/snake.jpg" alt="Asteroid">
             </a>
             <div class="inner">
               <h3>Snake Game</h3>
               <p>An interactive snake game built with HTML, CSS, JavaScript.</p>
-              <a href="/snakegame.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
+              <a href="/zCodeSite/snakegame.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
             </div>
           </div>
         </div>
