updating directory structure for assignment 1 submission

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
           </div>
           <div class="box">
             <a href="/audiovisualizer.html" class="image fit">
-              <img src="/website/src/components/images/audioVisual.jfif" alt="Asteroid">
+              <img src="/CS382/personalSite/images/ataripong.jpg" alt="Asteroid">
             </a>
             <div class="inner">
-              <h3>Spotify Audio Visualizer UI</h3>
-              <p>Built using HTML, CSS, JavaScript, MongoDB. As well as with love.
+              <h3>Multiplayer Atari Pong </h3>
+              <p>Upcoming game for Dr. Hamilton's CS 382 class
 
               </p>
               <a href="/audiovisualizer.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
