--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <img src="./images/ataripong.jpg" alt="Asteroid">
             </a>
             <div class="inner">
-              <h3>Multiplayer Atari Pong Game </h3>
+              <h3>Multiplayer Battleship Game </h3>
               <p>Upcoming game for Dr. Hamilton's CS 382 class
 
               </p>
