Creating the 10x10 grid for both players

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
             </div>
           </div>
           <div class="box">
-            <a href="./atariPongPage/atariPong.html" class="image fit">
-              <img src="./images/ataripong.jpg" alt="Asteroid">
+            <a href="./battleShipPage/battleshipGame.html" class="image fit">
+              <img src="./battleShipPage/battleshipCover.jpg" alt="Asteroid">
             </a>
             <div class="inner">
               <h3>Multiplayer Battleship Game </h3>
               <p>Upcoming game for Dr. Hamilton's CS 382 class
 
               </p>
-              <a href="./atariPongPage/atariPong.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
+              <a href="./battleShipPage/battleshipGame.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
             </div>
           </div>
 
