--- a/battleShipPage/battleshipGame.html
+++ b/battleShipPage/battleshipGame.html
@@ -40,12 +40,13 @@
 
     <div id="board-selection-screen">
       <div id="player1-selection-ships">
-        <div id="player1-submarine">Submarine</div>
+        <div class="submarine" draggable="true">Submarine</div>
+        <div class="carrier" draggable="true">Carrier</div>
+        <div class="destroyer" draggable="true">Destroyer</div>
+        <div class="cruiser" draggable="true">Cruiser</div>
+        <div class="battleship" draggable="true">Battleship</div>
       </div>
-
-
-
-
+      
       <div id="player1-selection-board"></div>
     </div>
 
