drag and drop update

--- a/battleShipPage/battleshipGame.html
+++ b/battleShipPage/battleshipGame.html
@@ -39,15 +39,16 @@
 
 
     <div id="board-selection-screen">
-      <div id="player1-selection-ships">
-        <div class="submarine" draggable="true">Submarine</div>
-        <div class="carrier" draggable="true">Carrier</div>
-        <div class="destroyer" draggable="true">Destroyer</div>
-        <div class="cruiser" draggable="true">Cruiser</div>
-        <div class="battleship" draggable="true">Battleship</div>
+
+      <div id="player1-selection-ships" class="drop-zone">
+        <div id="submarine" class="ship" draggable="true">Submarine</div>
+        <div id="carrier" class="ship" draggable="true">Carrier</div>
+        <div id="destroyer" class="ship" draggable="true">Destroyer</div>
+        <div id="cruiser" class="ship" draggable="true">Cruiser</div>
+        <div id="battleship" class="ship" draggable="true">Battleship</div>
       </div>
       
-      <div id="player1-selection-board"></div>
+      <div id="player1-selection-board" class="drop-zone"></div>
     </div>
 
 
