--- a/battleShipPage/battleshipGame.html
+++ b/battleShipPage/battleshipGame.html
@@ -31,13 +31,17 @@
       </ul>
     </nav>
 
-  <div class="board-display">
-    <div id="player1-board" class="game-board"></div>
-    <div id="player2-board" class="game-board"></div>
-  </div>
+    <div id="game-info">
+      <p>Turn: <span id="turn-display"></span></p>
+      <p>Info: <span id="info"></span></p>
+    </div>
 
+    <div class="main">
+      <div id="gamesboard-container"></div>
+    </div>
+  
   <div class="ship-display">
-    <div class="player1-ships">
+    <div class="option-container">
       <div id="0" class="submarine-before submarine" draggable="true">submarine</div>
       <div id="1" class="destroyer-before destroyer" draggable="true">destroyer</div>
       <div id="2" class="cruiser-before cruiser" draggable="true">cruiser</div>
@@ -45,21 +49,12 @@
       <div id="4" class="carrier-before carrier" draggable="true">carrier</div>
     </div>
 
-    <button id="player1-rotate-button">ROTATE</button>
-    <button id="player1-start-button">START</button>
+    <button id="flip-button">ROTATE</button>
+    <button id="start-button">START</button>
+  </div> 
+  
 
-    <div class="player2-ships">
-      <div id="0" class="submarine-before submarine" draggable="true">submarine</div>
-      <div id="1" class="destroyer-before destroyer" draggable="true">destroyer</div>
-      <div id="2" class="cruiser-before cruiser" draggable="true">cruiser</div>
-      <div id="3" class="battleship-before battleship" draggable="true">battleship</div>
-      <div id="4" class="carrier-before carrier" draggable="true">carrier</div>
-
-
-
-
-
-    </div>
+    
   </div>
 
 
