update to turn taking feature

--- a/battleShipPage/battleshipGame.html
+++ b/battleShipPage/battleshipGame.html
@@ -31,10 +31,10 @@
       </ul>
     </nav> -->
 
-    <!-- <div id="game-info">
+    <div id="game-info">
       <p>Turn: <span id="turn-display"></span></p>
       <p>Info: <span id="info"></span></p>
-    </div> -->
+    </div>
    
     <div class="main">
 
