operator functionality started

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -13,30 +13,30 @@
     <div class="main">
         <div class="calculator-body">
             <div id="display-screen">
-                <div id="display">0</div>
+                <div id="display">23423423</div>
             </div>
 
             <div id="controls">
-                <button id="AC" class="button">AC</button>
-                <button id="plusOrNeg" class="button">+/-</button>
-                <button id="modulus" class="button">%</button>
-                <button id="divide" class="button">÷</button>
-                <button id="7" class="button">7</button>
-                <button id="8" class="button">8</button>
-                <button id="9" class="button">9</button>
-                <button id="multiply" class="button">*</button>
-                <button id="4" class="button">4</button>
-                <button id="5" class="button">5</button>
-                <button id="6" class="button">6</button>
-                <button id="minus" class="button">-</button>
-                <button id="1" class="button">1</button>
-                <button id="2" class="button">2</button>
-                <button id="3" class="button">3</button>
-                <button id="plus" class="button">+</button>
-                <button id="0" class="button">0</button>
-                <button id="." class="button">.</button>
-                <button id="=" class="button">=</button>
-                <button id="Empty" class="button">ON</button>
+                <button id="AC-button" class="button">AC</button>
+                <button id="plusOrNeg-button" class="button">+/-</button>
+                <button id="modulus-button" class="button">%</button>
+                <button id="divide-button" class="button">÷</button>
+                <button id="seven-button" class="button">7</button>
+                <button id="eight-button" class="button">8</button>
+                <button id="nine-button" class="button">9</button>
+                <button id="multiply-button" class="button">*</button>
+                <button id="four-button" class="button">4</button>
+                <button id="five-button" class="button">5</button>
+                <button id="six-button" class="button">6</button>
+                <button id="minus-button" class="button">-</button>
+                <button id="one-button" class="button">1</button>
+                <button id="two-button" class="button">2</button>
+                <button id="three-button" class="button">3</button>
+                <button id="plus-button" class="button">+</button>
+                <button id="zero-button" class="button">0</button>
+                <button id="period-button" class="button">.</button>
+                <button id="equals-button" class="button">=</button>
+                <button id="power-button" class="button">ON</button>
                 
             </div>
             
