Beginning of nodejs expressjs tutorial

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -20,7 +20,7 @@
                 <button id="AC-button" class="button">AC</button>
                 <button id="plusOrNeg-button" class="button">+/-</button>
                 <button id="modulus-button" class="button">%</button>
-                <button id="divide-button" class="button">÷</button>
+                <button id="divide-button" class="button">/</button>
                 <button id="seven-button" class="button">7</button>
                 <button id="eight-button" class="button">8</button>
                 <button id="nine-button" class="button">9</button>
