turn taking functionality now working

--- a/battleShipPage/battleshipGame.html
+++ b/battleShipPage/battleshipGame.html
@@ -36,7 +36,7 @@
     <div class="main">
       <!--game-info is a simple container that uses span to dynamically give updates with JS textContext = ''-->
       
-      
+      <div id="title">BattleShips</div>
       <!--gamesboard-container is the black container you see, I target this inside my JS and append two game-boards in my nested for loop-->
       <div id="game-container"></div>
       <div id="game-info">
@@ -84,6 +84,6 @@
       </div>
     </footer>
 
-    <script src="./battleShipGame.js"></script>
+    <script src="./battleshipGame.js"></script>
   </body>
 </html>
