--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>TicTacToe</title>
 </head>
 <body>
-    <h1>This is and a game</h1>
+    <div class="main">
+        <div class="game"></div>
+        <div class="info">Info: </div>
+        <button class="restart-game">Play Again</button>
+    </div>
     
+    <script src="game.js"></script>
 </body>
 </html>
