--- a/multiPlayerBattleShipGame/public/index.html
+++ b/multiPlayerBattleShipGame/public/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     
+    <!--
     <div class="container">
       <div class="player p1">
         Player 1
@@ -32,7 +33,9 @@
         <div class="ready">Ready</div>
       </div>
     </div>
-
+    -->
+      
+<div class="game-title"><h1>Battleships</h1></div>
     <div class="game-container">
       <div class="grid-display">
         <div class="ship destroyer-container" draggable="true"><div id="destroyer-0"></div><div id="destroyer-1"></div></div>
