--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="main">
       <div class="inner">
 
-        <div class="about-container">
+        <!-- <div class="about-container">
 
             <div class="about-me picture">
                 <img src="./images/henry.png" width="300px" alt="profile- picture">
@@ -38,7 +38,7 @@
                 <h3>About Me</h3>
                 <p>Hi, my name is Adrian and I'm a Computer Science major student at NMSU. My hobbies include Rocket League, my dog Toaster, working out and tracking macros, as well as programming. My projects can be played below, thanks for visiting.</p>
             </div>
-        </div>
+        </div> -->
 
         <div class="thumbnails">
           <div class="box">
