--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </a>
             <div class="inner">
               <h3>Snake Game</h3>
-              <p>A retro inspired snake game built with HTML5, CSS3, and JavaScript. It uses conditional statements to power self and wall collisions, dynamic speed & growth progression, and event listeners to trigger sounds</p>
+              <p>A retro inspired snake game built with HTML5, CSS3, and JavaScript. It uses conditional statements to power self and wall collisions, dynamic speed & growth progression, and event listeners to trigger sounds.</p>
               <a href="./snakeGamePage/snakegame.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
             </div>
           </div>
