--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
-
-<html>
-  <head>
+<html lang="en">
+<head>
     <title>Adrian's Coding Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!--Font-awesome import for footer icons-->
-    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
-
-    <!--Landing page CSS styles-->
-      <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+    <link rel="stylesheet" href="./index.css" />
   </head>
-
   <body>
     
       <!--Navbar-->
@@ -28,30 +21,18 @@
     <div id="main">
       <div class="inner">
 
-        <div class="about-container">
-
-            <div class="about-me picture">
-                <img src="./images/henry.png" width="300px" alt="profile- picture">
-            </div>
-
-            <div class="about-me bio">
-                <h3>About Me</h3>
-                <p>Hi, my name is Adrian and I'm a Computer Science major student at NMSU. My hobbies include Rocket League, my dog Toaster, working out and tracking macros, as well as programming. My projects can be played below, thanks for visiting.</p>
-            </div>
-        </div>
-
         <div class="thumbnails">
           <div class="box">
-            <a href="./asteroidTrackerPage/asteroidTracker.html" class="image fit">
-              <img src="./images/asteroid.jpg"  alt="Asteroid">
+            <a href="www.labcrabs.com" class="image fit">
+              <img src="/images/WEPA.png"  alt="WEPA Tracker">
             </a>
             <div class="inner">
-              <h3>Near Earth Asteroid Tracker UI</h3>
-              <p>This project will fetch data from NASA's NeoW's API to draw the solar system. </p>
+              <h3>WEPAnow cloud-printing Tracker</h3>
+              <p>A real world use application designed for the NMSU ICT department. It automates the manual process of inspecting our NMSU Main Campus WEPAnow cloud-based printers. </p>
               <a href="./asteroidTrackerPage/asteroidTracker.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
             </div>
           </div>
-          <div class="box">
+          <!-- <div class="box">
             <a href="./battleShipPage/battleshipGame.html" class="image fit">
               <img src="./battleShipPage/battleshipCover.jpg" alt="Asteroid">
             </a>
@@ -62,7 +43,7 @@
               </p>
               <a href="./battleShipPage/battleshipGame.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
             </div>
-          </div>
+          </div> -->
 
           <div class="box">
             <a href="./snakeGamePage/snakegame.html" class="image fit">
