--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     
@@ -20,20 +20,6 @@
     <!--Main body-->
     <div id="main">
       <div class="inner">
-
-        <div class="thumbnails">
-          <div class="box">
-            <a href="www.labcrabs.com" class="image fit">
-              <img src="/images/WEPA.png"  alt="WEPA Tracker">
-            </a>
-            <div class="inner">
-              <h3>WEPAnow cloud-printing Tracker</h3>
-              <p>A real world use application designed for the NMSU ICT department. It automates the manual process of inspecting our NMSU Main Campus WEPAnow cloud-based printers. </p>
-              <a href="./asteroidTrackerPage/asteroidTracker.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
-            </div>
-          </div>
-    
-
         <div class="thumbnails">
           <div class="box">
             <a href="https://www.labcrabs.com" class="image fit">
@@ -54,11 +40,12 @@
               <h3>Snake Game</h3>
               <p>A retro inspired snake game built with HTML5, CSS3, and JavaScript. It uses conditional statements to power self and wall collisions, dynamic speed & growth progression, and event listeners to trigger sounds.</p>
               <a href="./snakeGamePage/snakegame.html" class="button fit" data-poptrox="youtube,800x400">Demo</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+            </div> <!--End Inner-->
+          </div> <!--End Box-->
+
+        </div> <!--End Thumbnails-->
+    </div> <!--End Inner-->
+    </div> <!--End Main-->
 
     <!--Footer-->
 <footer id="footerWrapper">
