--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="thumbnails">
           <div class="box">
             <a href="https://www.labcrabs.com" class="image fit">
-              <img src="/images/WEPA.png"  alt="WEPA Tracker">
+              <img src="/images/WEPA3.png"  alt="WEPA Tracker">
             </a>
             <div class="inner">
               <h3>WEPAnow Cloud-Printing Tracker</h3>
